Fixed word wrap issue in info-pane in view-place.html

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,8 @@
 /* Information Pane Styling */
 .info {
   margin: 80px 40px;
+  max-width: 640px;
+  overflow-wrap: normal;
 }
 
 .content > h2 {
